--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <main>
       <section class="container padding-small">
-        <img class="gutter-bottom" src="/images/image-qr-code.png" alt="" />
+        <img class="gutter-bottom" src="./images/image-qr-code.png" alt="" />
         <div class="padding-small">
           <h2 class="text-center gutter-bottom">
             Improve your front-end skills by building projects
